# flight-delay-risk

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  DELIVERY_NOTES_V7.md  Dockerfile  Dockerfile.api  Dockerfile.dashboard  LICENSE  Makefile  README.md  README_ES.md  RELEASE_MANIFEST.json  docker-compose.yml  pyproject.toml  render.yaml  requirements-advanced.txt  requirements.txt
.streamlit/: config.toml
app/: schemas.py
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT.md  DATA.md  DEMO_SCRIPT.md  DEPLOYMENT_READINESS.md  EUROPEAN_CONTEXT.md  GITHUB_CHECKLIST.md  INTERVIEW_NOTES.md  LIMITATIONS.md  MLOPS.md  MODEL_CARD.md  MODEL_EVALUATION.md  PREDICTIVE_FEATURES.md  PREDICTIVE_V6_1.md  PUBLIC_RELEASE.md  README_SCREENSHOTS.md  REAL_EUROPEAN_DATA.md  SCALE_REFIT_AND_DEPLOYMENT.md  UI_METRIC_GUIDE.md  UI_METRIC_GUIDE_ES.md  UK_CAA_ADAPTER.md  openapi.json
notebooks/: 01_exploration.ipynb
reports/: calibration_report.json  calibration_report.md  candidate_benchmark.json  candidate_benchmark.md  classification_report.txt  confusion_matrix.csv  drift_analysis.json  drift_analysis.md  drift_reference.json  error_analysis.json  error_analysis.md  feature_ablation.json  feature_ablation.md  feature_importance.csv  feature_stability.json  feature_stability.md  metrics.json  neural_smoke.json  operational_policy.json  operational_policy.md  performance_benchmark.json  policy_backtest.json  policy_backtest.md  production_smoke.json  robustness_audit.json  robustness_audit.md  scale_refit.json  scale_refit.md  temporal_backtest.json  temporal_backtest.md  test_results.json  ui_smoke.json
scripts/: benchmark_inference.py  build_layer4_release.py  build_layer5_release.py  build_release_manifest.py  build_schedule_context.py  download_bts_data.py  download_uk_caa_punctuality.py  evaluate_model.py  export_openapi.py  fit_scaled_finalists.py  neural_smoke.py  prepare_data.py  prepare_uk_caa_context.py  production_smoke.py  quality_gate.py  run_feature_ablation.py  run_feature_stability.py  run_local_demo.py  run_policy_backtest.py  run_real_data_demo.py  run_temporal_backtest.py  streamlit_smoke.py  train_european_model.py  train_model.py  tune_hyperparameters.py
src/: __init__.py  config.py  version.py
tests/: test_api.py  test_bts_column_normalization.py  test_bts_downloader.py  test_cli_smoke.py  test_data_foundation.py  test_european_context.py  test_european_layer.py  test_features.py  test_layer1_temporal_protocol.py  test_layer3_feature_intelligence.py  test_layer4_robustness_policy.py  test_layer5_scale_deployment.py  test_monitoring.py  test_product_foundation.py  test_product_ui.py  test_public_release.py  test_ranking_metrics.py  test_read_time_sampling.py  test_simple_delay_probability_ui.py  test_temporal_backtest.py  (+9 more)
(+52 files in other folders)
