[project]
name = "flightrisk"
version = "0.8.0"
description = "Pre-departure flight-delay risk workbench for schedule triage and ML validation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Oriol Martínez" }
]
keywords = ["machine-learning", "flight-delay", "fastapi", "scikit-learn", "portfolio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*", "scripts*"]
