[project]
name = "flight-delay-risk"
version = "1.5.0"
description = "Bilingual pre-departure flight-delay risk workbench for schedule triage, explanation and ML validation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Oriol Martínez" }
]
keywords = ["machine-learning", "flight-delay", "xgboost", "lightgbm", "pytorch", "fastapi", "scikit-learn", "portfolio"]

[project.optional-dependencies]
advanced = [
    "torch>=2.4,<3.0",
    "xgboost>=2.1,<4.0",
    "lightgbm>=4.3,<5.0",
    "optuna>=4.0,<5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*", "scripts*"]
